survey-salesforce/salesforce-app/src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <description>The caption of the question</description>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentTime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set date of the day and current time(take from device) as initial value</description>
        <label>Current Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoAfter__c</fullName>
        <label>DoAfter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DoBefore__c</fullName>
        <label>DoBefore</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FromVersion__c</fullName>
        <label>First Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hint__c</fullName>
        <description>A hint for the question</description>
        <label>Hint</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDraft__c</fullName>
        <description>Does the question belong to a survey version that can be edited? (1 = True, 0 = False)</description>
        <formula>IF(
    AND(FromVersion__c &lt;= Survey__r.Version__c, 
        OR(ToVersion__c = 0,
        ToVersion__c &gt;= Survey__r.Version__c)
    ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can be edited</label>
        <precision>0</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToVersion__c</fullName>
        <label>Last Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousVersionQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous version</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>New version</relationshipLabel>
        <relationshipName>NewVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this question must be answered before moving to the next question</description>
        <inlineHelpText>Check if this question must be answered before moving to the next question</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SamePage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All questions of a section show on same page</description>
        <label>SamePage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkipLogicBehavior__c</fullName>
        <label>SkipLogicBehavior</label>
        <picklist>
            <picklistValues>
                <fullName>Show</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SkipLogicOperator__c</fullName>
        <label>SkipLogicOperator</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FirstVersionLastVersion</fullName>
        <active>true</active>
        <errorConditionFormula>FromVersion__c  &gt; ToVersion__c</errorConditionFormula>
        <errorMessage>The first version value must be lesser or equal than last version</errorMessage>
    </validationRules>
</CustomObject>